Fixed height of vertical scrollbars on chromium

--- a/src/ui/styles/_scrollbar.scss
+++ b/src/ui/styles/_scrollbar.scss
@@ -1,6 +1,7 @@
 // Chromium ------------------------------------------------------ //
 
 ::-webkit-scrollbar {
+  height: 6px;
   width: 6px;
 } 
 
